# agentic-trading

./: Dockerfile.alphabot  Dockerfile.riskguard  Dockerfile.simulator  README.md  __init__.py  a2as.yaml  deploy_cloud_run.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
alphabot/: __init__.py  __main__.py  a2a_risk_tool.py  agent.py  agent_executor.py  requirements.txt
common/: __init__.py  config.py  models.py
common/utils/: agent_utils.py  indicators.py
riskguard/: __init__.py  __main__.py  agent.py  agent_executor.py  requirements.txt  rules.py
simulator/: __init__.py  main.py  market.py  portfolio.py  requirements.txt
tests/: __init__.py  conftest.py
tests/alphabot/: __init__.py  conftest.py  test_a2a_risk_tool.py  test_agent.py  test_agent_executor.py  test_main.py
tests/common/: __init__.py  test_agent_utils.py  test_config.py  test_indicators.py  test_models.py
tests/integration/: test_compliance_integration.py
tests/riskguard/: __init__.py  conftest.py  test_agent.py  test_agent_executor.py  test_main.py  test_rules.py
tests/simulator/: __init__.py  test_main.py  test_market.py  test_portfolio.py
