[project]
name = "agentic-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "a2a-sdk==1.1.0",
  "fastapi[standard]==0.139.0",
  "google-adk==2.3.0",
  "httpx==0.28.1",
  "httpx-sse==0.4.3",
  "jinja2==3.1.6",
  "pandas==3.0.4",
  "plotly==6.8.0",
  "sse-starlette==3.4.5",
  "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-mock==3.15.1",
  "ruff==0.15.20",
  "ty==0.0.56",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
    "ignore:label\\(\\) is deprecated:DeprecationWarning",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.ty.environment]
extra-paths = ["."]

[tool.pyrefly]
ignore-missing-imports = ["*"]
search-path = ["."]
